tests/samples/negative/types/const_type_mismatch.ax
module const_type_mismatch;

const bad: i32 = true;

fn main() -> i32 {
    return bad;
}
